--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   cached_network_image: ^3.2.2
   intl: ^0.17.0
   provider: ^6.0.4
+  http: ^0.13.5
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +67,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/img.png
+    - assets/images/back.png
     - assets/images/onlineShopping.jpeg
     - assets/images/Vector.png
     - assets/images/Subtract.png
